# calibre_lib

./: README.md  catalog.md  catalog_details.md  drive_create_local_copy.cmd  generateMD.lnk  libs.html  libs.md  local_git_add_metadata_changes.cmd  local_upload_this_to_GDrive.cmd  metadata_db_prefs_backup.json  mount_this_as_drive.cmd  pyproject.toml
_Prog/: metadata_db_prefs_backup.json
_details/: A. G. Hawk.md  Aaron F. Loacher.md  Abe Kóbó.md  Achim Lucchesi.md  Adams, Douglas.md  Agatha Christie.md  Akunyin, Borisz.md  Alan Glynn.md  Albert, Györgyi.md  Aldous Huxley.md  Alex Garland.md  Alexander McCall Smith.md  Alexandra Fischer-Hunold.md  Allan Pease.md  Amanda Silver.md  Amélie Poinssot.md  Andrea Schacht.md  Andrew Wilson.md  Ann Aguirre.md  Anna Gavalda.md  Anne Holt.md  Antal, Balázs.md  Anthony E. Zuiker.md  Arne Dahl.md  Arthur Golden.md  Arthur Ransome.md  Arto Paasilinna.md  Asher Jay.md  Asimov, Isaac.md  Aszlányi, Károly.md  Augusten Burroughs.md  Aurelius, Marcus.md  Badár, Sándor.md  Barbara Pease.md  Beck, Judit.md  Berg, Judit.md  Bertrice Small.md  Bohumil Hrabal.md  Bolgár György.md  Boris Vian.md  (+347 more)
kutya/: catalog.md  metadata.db
main/: .gitignore  README.html  README.md  catalog.html  catalog.md  catalog_authors.html  catalog_authors.md  catalog_tags.html  catalog_tags.md  metadata_db_prefs_backup.json
prog/: catalog.md  metadata.db
tools/: Dockerfile  Dockerfile2  README.md  pyproject.toml  start.cmd  start.sh
tools/calibre2md/: Library.py  Opf.py  main.py  utils.py
tools/calibre2web/: Library.py  __init__.py  main.py
(+8630 files in other folders)
