[tool.poetry]
name = "work"
version = "0.1.0"
description = ""
authors = ["Berczi Sandor <sandor.berczi@urss.hu>"]

[tool.poetry.dependencies]
python = "^3.8"
SnakeMD = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
